--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <!-- <link rel="stylesheet" type="text/css" href="styles.css"> -->
   </head>
   <body>
-    <h1>Teste Teste</h1>
+    <h1>José Aroldo</h1>
     <a href="/me.html">My other page</a>
   </body>
 </html>
