--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   </head>
   <body>
     <h1>José Aroldo</h1>
-    <a href="/me.html">My other page</a>
+    <a href="mailto:jose.2020110977@unicap.br">My other page</a>
   </body>
 </html>
